added database support for frontend apis